tests/lean/holes.lean.expected.out
holes.lean:4:4: error: placeholders '_' cannot be used where a function is expected
holes.lean:11:8: error: don't know how to synthesize placeholder
context:
case hole
f3 : Nat → Nat
x : Nat
y : Nat := g x+g x
⊢ Nat
holes.lean:11:4: error: don't know how to synthesize placeholder
context:
f3 : Nat → Nat
x : Nat
y : Nat := g x+g x
⊢ Nat
holes.lean:10:15: error: don't know how to synthesize placeholder
  @g … ?m.49 …
context:
f3 : Nat → Nat
x : Nat
⊢ Type
holes.lean:10:9: error: don't know how to synthesize placeholder
  @g … ?m.48 …
context:
f3 : Nat → Nat
x : Nat
⊢ Type
holes.lean:13:7: error: don't know how to synthesize placeholder
context:
α : Sort u_1
⊢ Sort ?
holes.lean:15:16: error: don't know how to synthesize placeholder
context:
α : Sort u_1
⊢ Sort ?
holes.lean:19:0: error: don't know how to synthesize placeholder
  @_uniq.114 … ?m.122 …
context:
f6 : Nat → Nat
a : Nat
f : ∀ {α : Type} {β : ?m.121 a}, α → α := fun {α : Type} {β : ?m.121 a} (a : α) => a
⊢ ?m.121 a
holes.lean:18:6: error: don't know how to synthesize placeholder
context:
f6 : Nat → Nat
a : Nat
α : Type
⊢ Sort ?
